--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,25 @@
+beautifulsoup4==4.8.0
+certifi==2019.6.16
 chardet==3.0.4
 colorama==0.4.1
 coreapi==2.3.3
 coreschema==0.0.4
-Django==2.2.4
-django-bootstrap4==0.0.8
+Django==2.2.5
+django-bootstrap4==1.0.1
 django-filter==2.2.0
-django-stubs==1.0.2
+django-stubs==1.1.0
 djangorestframework-stubs==1.0.0
-httpie==1.0.2
+httpie==1.0.3
 idna==2.8
 itypes==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 mypy==0.720
 mypy-extensions==0.4.1
+Pygments==2.4.2
 pytz==2019.2
+requests==2.22.0
+soupsieve==1.9.3
 sqlparse==0.3.0
 typed-ast==1.4.0
 typing-extensions==3.7.4
